Fix gradient at bottom of instructions textbox.
Only add gradient if there is a scrollbar and user is not scrolled to
the bottom.

Screencast: https://screencast.googleplex.com/cast/NTQzMzE1NDE4ODg2OTYzMnxjOWRlZmVlYy0yMA
Bug: b:484310451
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7585933
Commit-Queue: marissa shen <marissashen@google.com>
Cr-Commit-Position: refs/heads/main@{#1587243}

--- a/chrome/browser/resources/skills/skills_dialog.css
+++ b/chrome/browser/resources/skills/skills_dialog.css
@@ -128,6 +128,9 @@ textarea {
   background-color: transparent;
   padding: 10px 10px 0 10px;
   flex-grow: 1;
+}
+
+textarea.has-overflow {
   -webkit-mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
   mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
 }
